--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@statickit/react": "^2.1.1",
+    "@svgr/webpack": "^5.4.0",
     "next": "9.5.3",
+    "next-react-svg": "^1.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "next-images": "^1.4.1"
   }
 }
