--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@svgr/webpack": "^5.4.0",
     "next": "9.5.3",
     "next-react-svg": "^1.1.2",
+    "node-sass": "^4.14.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.10",
+    "styled-jsx-plugin-sass": "^1.0.0"
   },
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^1.1.1",
